--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                   </div>
                   <div class="col-md-6 offset-md-1">
                      <div class="titlepage text_align_right">
-                        <h2>About Dockdosaeu</h2>
+                        <h2>About Dockdosaeu2</h2>
                         <p>독~도~새~우~
                            dock~do~saeu~
                         </p>
